Changed theme to Material3. Updated the Bottom Navigation look and feel. Fixed bugs for users with LOTS of games. Fixed navigation issue for users starting a new game.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,10 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/navigation_selector_color"
-        app:itemTextColor="@drawable/navigation_selector_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:elevation="4dp"
+        app:itemRippleColor="@color/colorSecondaryVariant"
+        app:itemIconTint="@color/colorText"
         app:menu="@menu/menu_main"
         app:labelVisibilityMode="labeled"
         android:background="@color/dialogBackground"
