--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,6 +6,9 @@
     <color name="colorTextSecondary">#F0F0F0</color>
     <color name="sectionHeader">@color/colorText</color>
 
+    <color name="colorSecondary">#79b3e4</color>
+    <color name="colorSecondaryVariant">#11304d</color>
+
     <color name="loginBackground">@color/colorOffWhite</color>
     <color name="loginText">@color/colorText</color>
 
@@ -26,8 +29,9 @@
     <color name="roundButtonBorder">#444444</color>
     <color name="roundButtonBackground">#323038</color>
     <color name="colorPrimary">#389FFF</color>
+    <color name="colorPrimaryVariant">#11304d</color>
     <color name="colorPrimaryLight">#0E71C8</color>
-    <color name="colorPrimaryDark">#0E71C8</color> <!--//offWhite-->
+    <color name="colorPrimaryDark">#0E71C8</color>
     <color name="colorAccent">#389FFF</color>
     <color name="colorOffWhite">#000000</color>
 
