--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -111,7 +111,7 @@
             android:textSize="12sp"
             tools:text="14k" />
 
-        <androidx.emoji.widget.EmojiAppCompatTextView
+        <androidx.emoji2.widget.EmojiTextView
             android:id="@+id/flagView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
