--- a/app/src/main/res/layout/view_player_profile.xml
+++ b/app/src/main/res/layout/view_player_profile.xml
@@ -56,7 +56,7 @@
                 android:textStyle="bold"
                 />
 
-            <androidx.emoji.widget.EmojiAppCompatTextView
+            <androidx.emoji2.widget.EmojiTextView
                 android:id="@+id/flagView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
