Updated libs. De-jettified the project

--- a/app/src/main/res/layout/bottom_sheet_new_ai_game.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_ai_game.xml
@@ -139,7 +139,7 @@
         android:text="New game"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         />
 
