--- a/app/src/main/res/layout/fragment_aigame.xml
+++ b/app/src/main/res/layout/fragment_aigame.xml
@@ -114,10 +114,10 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginLeft="8dp"
-        android:background="@drawable/circle_background"
+        android:background="@drawable/ic_check_circle"
         android:backgroundTint="@color/black"
         android:padding="1dp"
-        android:src="@drawable/circle_background"
+        android:src="@drawable/ic_check_circle"
         app:layout_constraintBottom_toBottomOf="@id/nameLabelLeft"
         app:layout_constraintLeft_toRightOf="@id/nameLabelLeft"
         app:layout_constraintRight_toRightOf="@id/iconContainerLeft"
@@ -143,10 +143,10 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/circle_background"
+        android:background="@drawable/ic_check_circle"
         android:backgroundTint="@color/black"
         android:padding="1dp"
-        android:src="@drawable/circle_background"
+        android:src="@drawable/ic_check_circle"
         app:layout_constraintBottom_toBottomOf="@id/nameLabelRight"
         app:layout_constraintLeft_toLeftOf="@id/iconContainerRight"
         app:layout_constraintRight_toLeftOf="@id/nameLabelRight"
@@ -292,7 +292,7 @@
         android:backgroundTint="@color/black"
         android:padding="1dp"
         android:progress="50"
-        app:indicatorColor="@color/white"
+        app:indicatorColor="#FFFFFF"
         app:trackCornerRadius="3dp"
         app:layout_constraintBottom_toTopOf="@id/playControls"
         app:layout_constraintTop_toBottomOf="@id/winrateLabel"
