--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -20,7 +20,7 @@
         android:id="@+id/colorIndicatorWhite"
         android:layout_width="6dp"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="#FFFFFF"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <View
