--- a/app/src/main/res/layout/bottom_sheet_new_challenge.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_challenge.xml
@@ -98,7 +98,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         app:backgroundTint="@color/colorAccent"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         />
 </LinearLayout>
