--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -13,7 +13,7 @@
         android:layout_width="6dp"
         android:layout_height="match_parent"
         android:alpha="0.8"
-        android:background="@color/black"
+        android:background="@android:color/black"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <View
