--- a/app/src/main/res/layout/row_item_settings_dialog_theme.xml
+++ b/app/src/main/res/layout/row_item_settings_dialog_theme.xml
@@ -6,12 +6,22 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:padding="10dp">
-
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/theme_preview"
+            android:id="@+id/background"
             android:layout_width="63dp"
             android:layout_height="63dp"
             app:strokeColor="@android:color/black"
             app:strokeWidth="1dp" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/grid"
+            android:layout_width="63dp"
+            android:layout_height="63dp"
+            app:strokeColor="@android:color/black"
+            app:strokeWidth="1dp" />
+</RelativeLayout>
+
 
 </LinearLayout>
