--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,8 +54,8 @@
 
     <!--Color used for board background-->
     <color name="bg_yellow">#FFEB3B</color>
-    <color name="bg_hng">#00E7FB</color>
-    <color name="bg_dark_hng">#090C1F</color>
+    <color name="bg_cyan">#00E7FB</color>
+    <color name="bg_dark_blue">#090C1F</color>
     <color name="bg_book">#FFFFFF</color>
     <color name="bg_nocturne">#444444</color>
 
