--- a/app/src/main/res/layout/fragment_supporter.xml
+++ b/app/src/main/res/layout/fragment_supporter.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_arrow_back"
-        android:tint="@color/colorText"
+        app:tint="@color/colorText"
         app:layout_constraintLeft_toLeftOf="parent"
         android:elevation="1dp"
         android:background="?android:selectableItemBackground"
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="Support the Online GO Project"
+                android:text="Support the Android app"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="The Online GO project was started back in 2015 as a hobby. While excellent browser-based services (such as OGS) existed, there were no similar quality mobile apps. The goal was to create a free, professionally made Android app that allows GO players to interact and discover this amazing game.\n\nWe rely on support from people like you to make it possible. If you enjoy using the app, please consider supporting us with a monthly contribution and becoming a Supporter!"
+                android:text="The project was started back in 2015 as a hobby. While excellent browser-based services existed, there were no similar quality mobile apps. The goal was to create a free and open source (FOSS), professionally made Android app that allows GO players to interact and discover this amazing game.\n\nWe are not associated with OGS, although they graciously allowed us to use their online services for free.\n\nWe rely on support from people like you to make it possible. If you enjoy using the app, please consider supporting us with a monthly contribution and becoming a Supporter!"
                 android:textSize="16sp"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@id/text1"
@@ -258,7 +258,7 @@
                 android:id="@+id/text19"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Apps distributed through Google Play are required to use Google Pay, as Google charges 30% of the proceeds. We are not allowed to offer any alternative means of payment in-app."
+                android:text="Apps distributed through Google Play are required to use Google Pay, as Google charges 15% of the proceeds. We are not allowed to offer any alternative means of payment in-app."
                 style="@style/SupporterFAQContent"
                 app:layout_constraintTop_toBottomOf="@id/text18"
                 />
