Fixed a bug with chat when the keyboard is up. Tweaked transition animations.

--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -22,13 +22,23 @@
         android:label="MyGamesFragment" >
         <action
             android:id="@+id/action_myGamesFragment_to_aiGameFragment"
-            app:destination="@id/aiGameFragment" />
+            app:destination="@id/aiGameFragment"
+            app:enterAnim="@anim/slide_in_fragment"
+            app:exitAnim="@anim/slide_out_fragment"
+            />
         <action
             android:id="@+id/action_myGamesFragment_to_faceToFaceFragment"
-            app:destination="@id/faceToFaceFragment" />
+            app:destination="@id/faceToFaceFragment"
+            app:enterAnim="@anim/slide_in_fragment"
+            app:exitAnim="@anim/slide_out_fragment"
+            />
         <action
             android:id="@+id/action_myGamesFragment_to_gameFragment"
-            app:destination="@id/gameFragment" />
+            app:destination="@id/gameFragment"
+            app:enterAnim="@anim/slide_in_fragment"
+            app:exitAnim="@anim/slide_out_fragment"
+            app:launchSingleTop="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/aiGameFragment"
