--- a/app/src/main/res/layout/bottom_sheet_new_challenge.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_challenge.xml
@@ -94,7 +94,8 @@
         android:id="@+id/searchButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PLAY"
+        android:textAllCaps="true"
+        android:text="@string/play"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         app:backgroundTint="@color/colorAccent"
