--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,22 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.screens.main.MainActivity">
     <item
         android:id="@id/myGames"
-        android:title="Play"
+        android:title="@string/play"
         android:icon="@drawable/ic_board_filled"
         />
     <item
         android:id="@id/learn"
-        android:title="Learn"
+        android:title="@string/learn"
         android:icon="@drawable/ic_learn"
         />
     <item
         android:id="@id/stats"
-        android:title="Stats"
+        android:title="@string/stats"
         android:icon="@drawable/ic_diagram"
         />
     <item
         android:id="@id/settings"
-        android:title="Settings"
+        android:title="@string/settings"
         android:icon="@drawable/ic_settings_filled"
         />
 </menu>
